# pliron-wasm

./: Cargo.toml
projects/pliron-wasm/: Cargo.toml
projects/pliron-wasm/src/: lib.rs
projects/pliron-wasm/src/attrs/: defs.rs  mod.rs  parsable.rs  printable.rs  verify.rs
projects/pliron-wasm/src/ops/: defs.rs  mod.rs  parsable.rs  printable.rs
