[package]
name = "pliron-wasm"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "pliron wasm dialect"
repository = "https://github.com/oovm/dialect"
documentation = "https://docs.rs/pliron-wasm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
inventory = "0.3.13"
paste = "1.0.14"
combine = "4.6.6"
pliron = "0.1.7"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
